Fixed hover effects for projects on mobile.

--- a/public/assets/scss/elements/_portfolio.scss
+++ b/public/assets/scss/elements/_portfolio.scss
@@ -927,14 +927,19 @@ Portfolio Style Three
             .inner {
                 .portfolio_heading {
                     // transform: translateY(-62px);
-                    // transform: translateY(-70px);
-                    transform: translateY(-180px);
+                    transform: translateY(-70px);
                     transition: opacity .65s cubic-bezier(.05,.2,.1,1),transform .65s cubic-bezier(.05,.2,.1,1);
+                    @media(max-width: 768px){
+                        transform: translateY(-180px);
+                    }
                 }
                 .portfolio_hover {
-                    transform: translateY(-90px);
+                    transform: translateY(0);
                     opacity: 1;
                     transition: opacity .65s cubic-bezier(.05,.2,.1,1) 0.15s,transform .65s cubic-bezier(.05,.2,.1,1) 0.15s;
+                    @media(max-width: 768px){
+                        transform: translateY(-90px);
+                    }
                 }
 
             }
