--- a/public/assets/scss/style.css
+++ b/public/assets/scss/style.css
@@ -12217,22 +12217,36 @@ Portfolio Style Three
 }
 
 .im_portfolio:hover .content .inner .portfolio_heading {
-  -webkit-transform: translateY(-180px);
-          transform: translateY(-180px);
+  -webkit-transform: translateY(-70px);
+          transform: translateY(-70px);
   -webkit-transition: opacity 0.65s cubic-bezier(0.05, 0.2, 0.1, 1), -webkit-transform 0.65s cubic-bezier(0.05, 0.2, 0.1, 1);
   transition: opacity 0.65s cubic-bezier(0.05, 0.2, 0.1, 1), -webkit-transform 0.65s cubic-bezier(0.05, 0.2, 0.1, 1);
   transition: opacity 0.65s cubic-bezier(0.05, 0.2, 0.1, 1), transform 0.65s cubic-bezier(0.05, 0.2, 0.1, 1);
   transition: opacity 0.65s cubic-bezier(0.05, 0.2, 0.1, 1), transform 0.65s cubic-bezier(0.05, 0.2, 0.1, 1), -webkit-transform 0.65s cubic-bezier(0.05, 0.2, 0.1, 1);
 }
 
+@media (max-width: 768px) {
+  .im_portfolio:hover .content .inner .portfolio_heading {
+    -webkit-transform: translateY(-180px);
+            transform: translateY(-180px);
+  }
+}
+
 .im_portfolio:hover .content .inner .portfolio_hover {
-  -webkit-transform: translateY(-90px);
-          transform: translateY(-90px);
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
   opacity: 1;
   -webkit-transition: opacity 0.65s cubic-bezier(0.05, 0.2, 0.1, 1) 0.15s, -webkit-transform 0.65s cubic-bezier(0.05, 0.2, 0.1, 1) 0.15s;
   transition: opacity 0.65s cubic-bezier(0.05, 0.2, 0.1, 1) 0.15s, -webkit-transform 0.65s cubic-bezier(0.05, 0.2, 0.1, 1) 0.15s;
   transition: opacity 0.65s cubic-bezier(0.05, 0.2, 0.1, 1) 0.15s, transform 0.65s cubic-bezier(0.05, 0.2, 0.1, 1) 0.15s;
   transition: opacity 0.65s cubic-bezier(0.05, 0.2, 0.1, 1) 0.15s, transform 0.65s cubic-bezier(0.05, 0.2, 0.1, 1) 0.15s, -webkit-transform 0.65s cubic-bezier(0.05, 0.2, 0.1, 1) 0.15s;
+}
+
+@media (max-width: 768px) {
+  .im_portfolio:hover .content .inner .portfolio_hover {
+    -webkit-transform: translateY(-90px);
+            transform: translateY(-90px);
+  }
 }
 
 /*==========================
@@ -15339,6 +15353,9 @@ ul.list-style li + li {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
